--- a/3.html
+++ b/3.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="09.html" title="09">빵구</a></h1>
- <ol>
+  <h1><a href="index.html" title="09">빵구</a></h1>
+   <ol>
    <li><a href="1.html" title="출장빵구">빵구를 잘 뀌려면</a></li>
    <li><a href="2.html" title="돈쓸궁리">무엇을 사야하는가</a></li>
    <li><a href="3.html" title="핥핥">상님</a></li>
